email 인증로직 추가

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <tr>
                 <th><label for="email">E-mail</label></th>
                 <td>
-                  <input type="email" name="email" id="email" placeholder="이메일 주소를 입력하세요."></input>
+                  <input type="text" name="email" id="email" placeholder="이메일 주소를 입력하세요."></input>
                 </td>
               </tr>
 
