입력안했을 시 오류메세지 출력

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <label for="userid">User ID</label>
                 </th>
                 <td>
-                  <input type="text" name="userid" id="userid" placeholder="아이디를 입력하세요.">
+                  <input type="text" name="userid" id="userid" placeholder="아이디를 5글자 이상 입력하세요.">
                 </td>
               </tr>
 
@@ -35,7 +35,7 @@
                   <label for="pwd1">Password</label>
                 </th>
                 <td>
-                  <input type="password" name="pwd1" id="pwd1" placeholder="비밀번호를 입력하세요.">
+                  <input type="password" name="pwd1" id="pwd1" placeholder="특수문자, 영문, 숫자를 포함한 5글자 이상 입력하세요.">
                 </td>
               </tr>
               <tr>
@@ -43,7 +43,7 @@
                   <label for="pwd2">Re Password</label>
                 </th>
                 <td>
-                  <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 재 입력하세요.">
+                  <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 재입력하세요.">
                 </td>
               </tr>
 
@@ -51,7 +51,7 @@
               <tr>
                 <th><label for="email">E-mail</label></th>
                 <td>
-                  <input type="text" name="email" id="email" placeholder="이메일 주소를 입력하세요."></input>
+                  <input type="text" name="email" id="email" placeholder="올바른 이메일 형식을 입력하세요."></input>
                 </td>
               </tr>
 
@@ -109,7 +109,8 @@
               <tr>
                 <th><label for="'comments">Comments</label></th>
                 <td>
-                  <textarea name="comments" id="comments" cols="30" rows="4" placeholder="남기는 글을 입력하세요."></textarea>
+                  <textarea name="comments" id="comments" cols="30" rows="4"
+                    placeholder="남기는 글을 10글자 이상 입력하세요."></textarea>
                 </td>
               </tr>
 
