최종인증 구현 (비밀번호 재확인 보완)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <label for="pwd2">Re Password</label>
                 </th>
                 <td>
-                  <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 재입력하세요.">
+                  <input type="password" name="pwd2" id="pwd2" placeholder="비밀번호를 동일하게 입력하세요.">
                 </td>
               </tr>
 
